--- a/Gateways/Gateways.csproj
+++ b/Gateways/Gateways.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\UseCases\UseCases.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ViewModels\" />
+  </ItemGroup>
+
 </Project>
